--- a/package.json
+++ b/package.json
@@ -11,20 +11,31 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "axios": "^0.27.2",
     "graphql": "^16.6.0",
     "magic-sdk": "^9.0.0",
-    "moralis": "^2.2.0",
+    "moralis": "^2.4.0",
+    "moralis-v1": "^1.11.0",
     "next": "12.2.5",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-moralis": "^1.4.1",
+    "react-moralis": "^1.4.2",
+    "react-redux": "^8.0.2",
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-redux": "^7.1.24",
+    "@types/webpack-env": "^1.18.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "typescript": "^4.8.3"
   }
 }
